src/app/components/home/home.component.css
/* ... */
.app-features .app-explore {
    display        : flex;
    justify-content: center !important;
    margin-bottom  : 40px;
}

.banner-full .image {
    display        : flex;
    justify-content: center;
}

.banner-full .image img {
    height: 625px;
}

@media (max-width: 768px) {
    .banner-full .image {
        margin-bottom: 30px;
    }
}

@media (max-width: 768px) {
    .banner-full .block {
        text-align: center;
    }
}

.banner-full .block .logo {
    margin-bottom: 40px;
}

.banner-full .block h1 {
    margin-bottom: 40px;
}

.banner-full .block p {
    font-size    : 20px;
    margin-bottom: 50px;
}

.banner-full .block .app {
    margin-bottom: 20px;
}

.video-promo {
    padding: 150px 0;
}

.video-promo .content-block {
    width     : 60%;
    margin    : 0 auto;
    text-align: center;
}

.video-promo .content-block h2 {
    font-size: 30px;
    color    : #fff;
}

.video-promo .content-block p {
    margin-bottom: 30px;
}

.video-promo .content-block a i.video {
    height       : 125px;
    width        : 125px;
    background   : #2e7eed;
    display      : inline-block;
    font-size    : 40px;
    color        : #fff;
    text-align   : center;
    line-height  : 125px;
    border-radius: 100%;
}

.video-promo .content-block a:focus {
    outline: 0;
}

.testimonial .testimonial-slider .item {
    padding-bottom: 10px;
}

.testimonial .testimonial-slider .item .block {
    padding      : 40px;
    text-align   : center;
    margin       : 10px;
    border-radius: 5px;
}

.testimonial .testimonial-slider .item .block .image {
    margin-top     : 30px;
    margin-bottom  : 5px;
    width          : 100%;
    display        : flex;
    justify-content: center;
}

@media (max-width: 768px) {
    .testimonial .testimonial-slider .item .block .image {
        flex-grow: 1;
    }
}

.testimonial .testimonial-slider .item .block .image img {
    height       : 40px;
    width        : 40px;
    border-radius: 100%;
}

.testimonial .testimonial-slider .item .block p {
    font-family: "Lora", serif;
    font-style : italic;
    color      : #888888;
}

.testimonial .testimonial-slider .item .block cite {
    font-style: normal;
    font-size : 14px;
    color     : #161616;
}

.testimonial .testimonial-slider .owl-dots .owl-dot:hover span {
    background: #2e7eed;
}

.testimonial .testimonial-slider .owl-dots .owl-dot.active span {
    background: #2e7eed;
}

/* homepage 3 */
.gradient-banner {
    z-index : 1;
    padding : 100px 0 170px;
    position: relative;
    overflow: hidden;
}

.gradient-banner::before {
    position         : absolute;
    content          : '';
    bottom           : 0;
    left             : 50%;
    -webkit-transform: translateX(-50%);
    transform        : translateX(-50%);
    width            : 200%;
    height           : 200%;
    border-radius    : 50%;
    background-image : linear-gradient(45deg, #32a6c3 0%, #2d78e2 20%, #1e3a6b 50%);
}

.pull-top {
    margin-top: -100px;
}

.shapes-container {
    position: absolute;
    overflow: hidden;
    top     : 0;
    left    : 0;
    right   : 0;
    bottom  : 0;
}

.shapes-container .shape {
    position: absolute;
}

.shapes-container .shape::before {
    content          : '';
    top              : 0;
    bottom           : 0;
    left             : 0;
    right            : 0;
    background-color : rgba(255, 255, 255, 0.1);
    -webkit-transform: rotate(-35deg);
    transform        : rotate(-35deg);
    position         : absolute;
    border-radius    : 50px;
}

.shapes-container .shape:nth-child(1) {
    top   : 2%;
    left  : 11%;
    width : 400px;
    height: 70px;
}

.shapes-container .shape:nth-child(2) {
    top   : 14%;
    left  : 18%;
    width : 200px;
    height: 15px;
}

.shapes-container .shape:nth-child(3) {
    top   : 80%;
    left  : 4%;
    width : 300px;
    height: 60px;
}

.shapes-container .shape:nth-child(4) {
    top   : 85%;
    left  : 15%;
    width : 100px;
    height: 10px;
}

.shapes-container .shape:nth-child(5) {
    top   : 5%;
    left  : 50%;
    width : 300px;
    height: 25px;
}

.shapes-container .shape:nth-child(6) {
    top   : 4%;
    left  : 52%;
    width : 200px;
    height: 5px;
}

.shapes-container .shape:nth-child(7) {
    top   : 80%;
    left  : 70%;
    width : 200px;
    height: 5px;
}

.shapes-container .shape:nth-child(8) {
    top   : 55%;
    left  : 95%;
    width : 200px;
    height: 5px;
}

.shapes-container .shape:nth-child(9) {
    top   : 50%;
    left  : 90%;
    width : 300px;
    height: 50px;
}

.shapes-container .shape:nth-child(10) {
    top   : 30%;
    left  : 60%;
    width : 500px;
    height: 55px;
}

.shapes-container .shape:nth-child(11) {
    top   : 60%;
    left  : 60%;
    width : 200px;
    height: 5px;
}

.shapes-container .shape:nth-child(12) {
    top   : 35%;
    left  : 75%;
    width : 200px;
    height: 5px;
}

.shapes-container .shape:nth-child(13) {
    top   : 90%;
    left  : 40%;
    width : 300px;
    height: 45px;
}

.shapes-container .shape:nth-child(14) {
    top   : 54%;
    left  : 75%;
    width : 200px;
    height: 5px;
}

.shapes-container .shape:nth-child(15) {
    top   : 50%;
    left  : 90%;
    width : 200px;
    height: 5px;
}

.shapes-container .shape:nth-child(16) {
    top   : 50%;
    left  : 81%;
    width : 100px;
    height: 5px;
}

.zindex-1 {
    z-index: 1;
}

hr {
    display   : block;
    height    : 2px;
    border    : 0;
    border-top: 2px solid #2e7eed;
    margin    : 1em 0;
    padding   : 0;
}

.icon-box {
    height    : 80px;
    width     : 80px;
    text-align: center;
    background: #2e7eed;
}

.icon-box i {
    line-height: 80px;
    font-size  : 30px;
}

.founder {
    margin-bottom: 30px;
}

.founder img {
    border-radius: 5px;
    margin-bottom: 25px;
}

.founder h2 {
    font-size  : 30px;
    line-height: 30px;
}

.founder cite {
    font-size : 14px;
    font-style: normal;
}
/* ... */

